--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,26 +4,142 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 
-	<main class="min-h-[100dvh] bg-brand-dark">
+	<main class="min-h-[100dvh] bg-brand-dark pb-12">
 
-		<header class="text-left pt-12 mx-auto max-w-2xl px-8 md:px-0">
+		<div class="mx-auto max-w-2xl px-4 md:px-0">
 
-			<img src="/profile-pic.webp" class="rounded-full size-16 items-center" />
+			<header class="text-left pt-12">
 
-			<div class="flex items-center gap-3 pt-2">
-				<h1 class="text-brand-white text-h1">Fernando Guerrero</h1>
-				<i class="icon-[octicon--verified-16] text-brand-accent size-6" role="img" aria-hidden="true" />
+				<img src="/profile-pic.webp" alt="Foto de perfil" class="rounded-full size-16" />
+
+				<div class="flex items-center gap-3 pt-2">
+					<h1 class="text-brand-white text-h1">Fernando Guerrero</h1>
+					<i class="icon-[octicon--verified-16] text-brand-accent size-6" role="img" aria-hidden="true"></i>
+				</div>
+
+
+				<h3 class="text-brand-white font-regular text-h4">Marketing<span> · </span>Desarrollo Front-End</h3>
+
+			</header>
+
+			<div class="py-10">
+				<hr class="border-brand-white/20">
 			</div>
 
+			<section id="about">
+				<h2 class="text-h2 text-brand-white">
+					Sobre mí
+				</h2>
 
-			<p class="text-brand-white font-regular text-base">Marketing y Desarrollo Front-End</p>
-			<p class="text-brand-white font-regular text-base text-brand-white/70">Especialista en la creación de sitios web minimalistas, ultraoptimizados y SEO-driven.</p>
+				<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed ">
+					
+					<p class="mt-4">
+						<strong class="text-brand-white">Responsable del Área de Marketing</strong> en
+						<a class="underline text-cyan-300" href="https://fsi.training/">FSI Training</a>.
+					</p>
 
-		<header/>
+					<p>
+						Trabajo entre marketing y desarrollo, con una <strong class="text-brand-white">visión de ingeniería</strong> aplicada a sistemas digitales. Busco soluciones quirúrgicas simples, y durables, centradas en la experiencia de cliente y usuario.
+					</p>
+					
+					<p>
+						Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y <strong class="text-brand-white">mejorar la propuesta de valor de mi empresa,</strong> con la colaboración de un excelente equipo.
+					</p>
+				</div>
 
-		<div class="py-8">
-			<hr class="text-brand-white">
+			</section>
+
+			<div class="py-10">
+				<hr class="border-brand-white/20">
+			</div>
+
+			<section>
+				<h2 class="text-h2 text-brand-white">
+					Tecnologías
+				</h2>
+
+				<ul class="grid grid-cols-4 gap-4 md:grid-cols-8 md:gap-6 pt-4">
+					<li class="size-18 md:size-16 border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-fuchsia-500">
+						<img src="/astro.svg" alt="Astro" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-cyan-500">
+						<img src="/tailwind.svg" alt="Tailwind" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-yellow-500">
+						<img src="/javascript.svg" alt="JavaScript" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500">
+						<img src="/wordpress.svg" alt="WordPress" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-500">
+						<img src="/ganalytics.svg" alt="Google Analytics" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-500">
+						<img src="/glookerstudio.svg" alt="Google Looker Studio" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-800">
+						<img src="/aillustrator.svg" alt="Illustrator" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-800">
+						<img src="/aphotoshop.svg" alt="Photoshop" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-indigo-500">
+						<img src="/apremiere.svg" alt="Adobe Premiere" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-violet-500">
+						<img src="/aaftereffects.svg" alt="Adobe After Effects" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-rose-700">
+						<img src="/aindesign.svg" alt="Adobe InDesign" class="p-4" />
+					</li>
+
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-slate-200">
+						<img src="/figma.svg" alt="Figma" class="p-4" />
+					</li>
+				</ul>
+
+			</section>
+
 		</div>
+
 	</main>
+
+	<footer class="bg-brand-dark flex">
+		<div class="flex flex-col justify-between items-center mx-auto max-w-2xl py-6 px-4 md:px-0">
+
+			<nav aria-label="Social links">
+				<ul class="flex flex-row mb-4 gap-6">
+					<li>
+						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer">
+							<span class="icon-[skill-icons--instagram] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" aria-label="Instagram"/>
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/fernandoguerrero98" target="_blank" rel="noopener noreferrer">
+							<span class="icon-[mdi--github] size-8 text-brand-white hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" aria-label="Github" />
+						</a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/fernandoguerrerobonilla/" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
+							<span class="icon-[devicon--linkedin] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" />
+						</a>
+					</li>
+				</ul>
+			</nav>
+
+			<small class="text-base text-brand-white/60">© 2025. All rights reserved.</small>
+
+		</div>
+	</footer>
 
 </Layout>
