--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro';
 				</div>
 
 
-				<h3 class="text-brand-white font-regular text-h4">Marketing<span> · </span>Desarrollo Front-End</h3>
+				<p class="text-brand-white font-regular text-h4">Marketing<span> · </span>Desarrollo Front-End</p>
 
 			</header>
 
@@ -120,13 +120,13 @@ import Layout from '../layouts/Layout.astro';
 			<nav aria-label="Social links">
 				<ul class="flex flex-row mb-4 gap-6">
 					<li>
-						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer">
-							<span class="icon-[skill-icons--instagram] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" aria-label="Instagram"/>
+						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+							<span class="icon-[skill-icons--instagram] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true"/>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/fernandoguerrero98" target="_blank" rel="noopener noreferrer">
-							<span class="icon-[mdi--github] size-8 text-brand-white hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" aria-label="Github" />
+						<a href="https://github.com/fernandoguerrero98" target="_blank" rel="noopener noreferrer" aria-label="Github">
+							<span class="icon-[mdi--github] size-8 text-brand-white hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" />
 						</a>
 					</li>
 					<li>
