Fixed aria tags and resize profile pic to improve performance and accesibility

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import Layout from '../layouts/Layout.astro';
 			<nav aria-label="Social links">
 				<ul class="flex flex-row mb-4 gap-6">
 					<li>
-						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
 							<span class="icon-[skill-icons--instagram] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true"/>
 						</a>
 					</li>
