--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 
-	<main class="min-h-[100dvh] bg-brand-dark pb-12">
+	<main class="min-h-[90dvh] bg-brand-dark pb-12">
 
 		<div class="mx-auto max-w-2xl px-4 md:px-0">
 
@@ -59,51 +59,51 @@ import Layout from '../layouts/Layout.astro';
 				</h2>
 
 				<ul class="grid grid-cols-4 gap-4 md:grid-cols-8 md:gap-6 pt-4">
-					<li class="size-18 md:size-16 border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-fuchsia-500">
+					<li class="size-18 md:size-16 border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-fuchsia-500" title="Astro">
 						<img src="/astro.svg" alt="Astro" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-cyan-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-cyan-500" title="Tailwind">
 						<img src="/tailwind.svg" alt="Tailwind" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-yellow-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-yellow-500" title="JavaScript">
 						<img src="/javascript.svg" alt="JavaScript" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="WordPress">
 						<img src="/wordpress.svg" alt="WordPress" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-500" title="Google Analytics">
 						<img src="/ganalytics.svg" alt="Google Analytics" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-500" title="Google Looker Studio">
 						<img src="/glookerstudio.svg" alt="Google Looker Studio" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-800">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-800" title="Adobe Illustrator">
 						<img src="/aillustrator.svg" alt="Illustrator" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-800">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-800" title="Adobe Photoshop">
 						<img src="/aphotoshop.svg" alt="Photoshop" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-indigo-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-indigo-500" title="Adobe Premiere">
 						<img src="/apremiere.svg" alt="Adobe Premiere" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-violet-500">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-violet-500" title="Adobe After Effects">
 						<img src="/aaftereffects.svg" alt="Adobe After Effects" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-rose-700">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-rose-700" title="Adobe InDesign">
 						<img src="/aindesign.svg" alt="Adobe InDesign" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-slate-200">
+					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-slate-200" title="Figma">
 						<img src="/figma.svg" alt="Figma" class="p-4" />
 					</li>
 				</ul>
