Fixed viewport mobile bug

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,11 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 
-	<main class="min-h-[90dvh] bg-brand-dark pb-12">
+	<main class="min-h-[90svh] bg-brand-dark pb-12">
 
 		<div class="mx-auto max-w-2xl px-4 md:px-0">
 
-			<header class="text-left pt-12">
+			<header class="text-left pt-8 md:12">
 
 				<img src="/profile-pic.webp" alt="Foto de perfil" class="rounded-full size-16" />
 
