--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro';
 				</div>
 
 
-				<p class="text-brand-white font-regular text-h4">Marketing<span> · </span>Desarrollo Front-End</p>
+				<p class="text-brand-white font-space-grotesk text-h4">Marketing<span> · </span>Desarrollo Front-End</p>
 
 			</header>
 
