--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,51 +59,51 @@ import Layout from '../layouts/Layout.astro';
 				</h2>
 
 				<ul class="grid grid-cols-4 gap-4 md:grid-cols-8 md:gap-6 pt-4">
-					<li class="size-18 md:size-16 border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-fuchsia-500" title="Astro">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Astro">
 						<img src="/astro.svg" alt="Astro" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-cyan-500" title="Tailwind">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Tailwind">
 						<img src="/tailwind.svg" alt="Tailwind" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-yellow-500" title="JavaScript">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="JavaScript">
 						<img src="/javascript.svg" alt="JavaScript" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="WordPress">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="WordPress">
 						<img src="/wordpress.svg" alt="WordPress" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-500" title="Google Analytics">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Google Analytics">
 						<img src="/ganalytics.svg" alt="Google Analytics" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-500" title="Google Looker Studio">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Google Looker Studio">
 						<img src="/glookerstudio.svg" alt="Google Looker Studio" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-orange-800" title="Adobe Illustrator">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Adobe Illustrator">
 						<img src="/aillustrator.svg" alt="Illustrator" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-blue-800" title="Adobe Photoshop">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Adobe Photoshop">
 						<img src="/aphotoshop.svg" alt="Photoshop" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-indigo-500" title="Adobe Premiere">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Adobe Premiere">
 						<img src="/apremiere.svg" alt="Adobe Premiere" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-violet-500" title="Adobe After Effects">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Adobe After Effects">
 						<img src="/aaftereffects.svg" alt="Adobe After Effects" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-rose-700" title="Adobe InDesign">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Adobe InDesign">
 						<img src="/aindesign.svg" alt="Adobe InDesign" width="64" height="64" class="p-4" />
 					</li>
 
-					<li class="size-18 md:size-16  border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-slate-200" title="Figma">
+					<li class="size-18 md:size-16 flex items-center justify-center border rounded-xl border-brand-white/30 bg-brand-white/10 hover:scale-105 duration-300 ease-in-out transition hover:border-sky-500" title="Figma">
 						<img src="/figma.svg" alt="Figma" width="64" height="64" class="p-4" />
 					</li>
 				</ul>
