--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,19 +61,22 @@
 
 /* Ajustes predeterminados */
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
   margin: 0;
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
   font-family: var(--font-geist);
-  background: var(--brand-dark);
-
+  background: var(--color-brand-dark);
 }
 
 body {
   overscroll-behavior-y: none;
-  background: var(--brand-dark);
+  background: var(--color-brand-dark);
 
 }
 
