--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,7 @@
   
   /* colores */
   --color-brand-dark: #070707;
+  --color-brand-semidark: #141414;
   --color-brand-white: #FAFAFA;
   --color-brand-accent: #fb2c36;
 
@@ -85,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 :focus-visible {
-  outline: 2px solid var(--color-brand-accent);
+  outline: 1px solid var(--color-brand-accent);
   outline-offset: 3px;
 }
 
