--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro';
 
 const preloads = [
 	  {
-    href: "/src/assets/fonts/SpaceGrotesk-600.woff2",
+    href: "/fonts/SpaceGrotesk-600.woff2",
     as: "font",
     type: "font/woff2",
     crossorigin: "anonymous",
@@ -51,7 +52,7 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 					Sobre mí
 				</h2>
 
-				<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed ">
+				<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed">
 					
 					<p class="mt-4">
 						<strong class="text-brand-white">Responsable del Área de Marketing</strong> en
@@ -134,32 +135,6 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 
 	</main>
 
-	<footer class="bg-brand-dark flex">
-		<div class="flex flex-col justify-between items-center mx-auto max-w-2xl py-6 px-4 md:px-0">
-
-			<nav aria-label="Social links">
-				<ul class="flex flex-row mb-4 gap-6">
-					<li>
-						<a href="https://www.instagram.com/fxaptb_/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-							<span class="icon-[skill-icons--instagram] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true"/>
-						</a>
-					</li>
-					<li>
-						<a href="https://github.com/fernandoguerrero98" target="_blank" rel="noopener noreferrer" aria-label="Github">
-							<span class="icon-[mdi--github] size-8 text-brand-white hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" />
-						</a>
-					</li>
-					<li>
-						<a href="https://www.linkedin.com/in/fernandoguerrerobonilla/" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
-							<span class="icon-[devicon--linkedin] size-8 hover:scale-110 transition ease-in-out duration-200" role="img" aria-hidden="true" />
-						</a>
-					</li>
-				</ul>
-			</nav>
-
-			<small class="text-base text-brand-white/60">© 2025. All rights reserved.</small>
-
-		</div>
-	</footer>
+	<Footer />
 
 </Layout>
