Honeypot input hidden

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -70,7 +70,7 @@ const description = "Si necesitas contactar conmigo por motivos profesionales, p
               />
             </li>
 
-            <li class="">
+            <li class="hidden">
               <label for="company">Empresa</label>
               <input
                 type="text"
