Minor style changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,11 +39,11 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 				</div>
 
 
-				<p class="text-brand-white font-space-grotesk text-h4">Marketing<span> · </span>Desarrollo Front-End</p>
+				<p class="text-brand-white text-h4">Marketing<span> · </span>Desarrollo Front-End</p>
 
 			</header>
 
-			<div class="py-10">
+			<div class="py-12">
 				<hr class="border-brand-white/20">
 			</div>
 
@@ -55,22 +55,22 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 				<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed">
 					
 					<p class="mt-4">
-						<strong class="text-brand-white">Responsable del Área de Marketing</strong> en
-						<a class="underline text-cyan-300" href="https://fsi.training/">FSI Training</a>.
+						<strong>Responsable del Área de Marketing</strong> en
+						<a class="underline text-brand-white/80" href="https://fsi.training/">FSI Training</a>.
 					</p>
 
 					<p>
-						Trabajo entre marketing y desarrollo, con una <strong class="text-brand-white">visión de ingeniería</strong> aplicada a sistemas digitales. Busco soluciones quirúrgicas simples, y durables, centradas en la experiencia de cliente y usuario.
+						Trabajo entre marketing y desarrollo, con una <strong>visión de ingeniería</strong> aplicada a sistemas digitales. Busco soluciones quirúrgicas simples, y durables, centradas en la experiencia de cliente y usuario.
 					</p>
 					
 					<p>
-						Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y <strong class="text-brand-white">mejorar la propuesta de valor de mi empresa,</strong> con la colaboración de un excelente equipo.
+						Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y <strong>mejorar la propuesta de valor de mi empresa,</strong> con la colaboración de un excelente equipo.
 					</p>
 				</div>
 
 			</section>
 
-			<div class="py-10">
+			<div class="py-12">
 				<hr class="border-brand-white/20">
 			</div>
 
