--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -25,23 +25,23 @@ const description = "Si necesitas contactar conmigo por motivos profesionales, p
 
 		<div class="flex flex-col mx-auto max-w-2xl px-4 md:px-0">
 
-      <a class="flex pt-8 text-cyan-300 items-center gap-2 cursor-pointer" href="/">
+      <a class="flex pt-8 text-brand-white items-center gap-2 cursor-pointer" href="/">
         <i class="icon-[material-symbols--arrow-back] hover:rotate" aria-hidden="true"></i>
         <span class="underline">Volver a la página principal</span>
       </a>
 
       <section id="contacto">
 
-        <h1 class="text-h1 pt-8">Ponte en contacto conmigo</h1>
+        <h1 class="text-h1 pt-12">Ponte en contacto conmigo</h1>
 
         <p class="mt-4 text-base text-brand-white/60 leading-relaxed">
-          Rellena este formulario con tus <strong class="text-brand-white">datos de contacto</strong> y el <strong class="text-brand-white">motivo de tu consulta.</strong>
+          Rellena este formulario con tus <strong>datos de contacto</strong> y el <strong>motivo de tu consulta.</strong>
           Te responderé por correo electrónico tan pronto como me sea posible.
         </p>
 
         <form action={apiRoute} method="post">
 
-          <ul class="flex flex-col bg-brand-semidark text-brand-white mt-8 gap-8 py-12 px-12 border-1 border-brand-white/20">
+          <ul class="flex flex-col bg-brand-semidark text-brand-white mt-12 gap-8 py-8 px-8 md:py-12 md:px-12 border-1 border-brand-white/20">
             <li class="flex flex-col gap-4">
               <label for="name" class="font-bold">Nombre y apellidos:</label>
               <input
