--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'Space Grotesk';
-  src: url('/src/assets/fonts/SpaceGrotesk-600.woff2') format('woff2');
+  src: url('/fonts/SpaceGrotesk-600.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: 'Geist';
-  src: url('/src/assets/fonts/Geist-600.woff2') format('woff2');
+  src: url('/fonts/Geist-600.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -22,7 +22,7 @@
 
 @font-face {
   font-family: 'Geist';
-  src: url('/src/assets/fonts/Geist-400.woff2') format('woff2');
+  src: url('/fonts/Geist-400.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -38,7 +38,7 @@
   --color-brand-dark: #070707;
   --color-brand-semidark: #141414;
   --color-brand-white: #FAFAFA;
-  --color-brand-accent: #fb2c36;
+  --color-brand-accent: #e7000b;
 
   /* tamaños de fuente */
   --text-h1: 2rem;
