Updated profile-pic.webp route in preloader list

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const preloads = [
     crossorigin: "anonymous",
   },
   {
-    href: "/profile-pic.webp",
+    href: "images/profile-pic.webp",
     as: "image",
     type: "image/webp",
     fetchpriority: "high",
@@ -84,16 +84,16 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 					<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed">
 						
 						<p class="mt-4">
-							<strong class="text-brand-white/80">Responsable de Marketing</strong> en
-							<a class="underline text-brand-white/80" href="https://fsi.training/">FSI Training</a>.
+							<strong class="text-brand-white/80">Responsable de Marketing en
+							<a class="underline text-brand-white/80" href="https://fsi.training/">FSI Training</a>.</strong>
 						</p>
 
 						<p>
-							Trabajo entre marketing y desarrollo, con una <strong class="text-brand-white/80">visión de ingeniería</strong> aplicada a sistemas digitales. Busco soluciones simples, y durables, centradas en la experiencia de cliente y usuario.
+							Trabajo entre marketing y desarrollo, con una visión de ingeniería aplicada a sistemas digitales. Busco soluciones simples, y durables, centradas en la experiencia de cliente y usuario.
 						</p>
 						
 						<p>
-							Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y <strong class="text-brand-white/80">mejorar la propuesta de valor de mi empresa,</strong> con la colaboración de un excelente equipo.
+							Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y mejorar la propuesta de valor de mi empresa, con la colaboración de un excelente equipo.
 						</p>
 					</div>
 
